# TFLOP

./: .gitignore  Makefile  README.md  evaluate_ted.py  pyproject.toml  requirements.txt  test.py  train.py
config/exp_configs/: data_pubtabnet.yaml  general_exp.yaml
dataset/: data_preprocessing_config.json  preprocess_data.py  preprocess_data_utils.py
scripts/preprocess_data/: preprocess_pubtabnet.sh
scripts/testing/: test_pubtabnet.sh
scripts/training/: train_pubtabnet.sh
tflop/: evaluator.py  loss.py  utils.py
tflop/datamodule/datasets/: tflop.py
tflop/datamodule/preprocess/: common_utils.py  hi_mul_con_table.py  image_utils.py
tflop/lightning_module/: lightning_module.py
tflop/model/decoder/: mbart_decoder.py  utils.py
tflop/model/model/: TFLOP.py  TFLOP_Config.py
tflop/model/visual_encoder/: __init__.py  swin.py
tflop/model/visual_encoder/backbones/: SwinV2.py
