[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
py_version = 310
line_length = 88
atomic = true
combine_as_imports = true
force_sort_within_sections = true
profile = "black"